
package mysql;

message tb_promotions{
    required uint32 id					= 1;
	required string name				= 2;
	required uint32 type				= 3;
	required uint32 start_time			= 4;
	required uint32 duration_time		= 5;
	required uint32 end_time			= 6;
	required uint32 loop_time			= 7;
	required uint32 state				= 8;
}
